# matrix

./: CMakeLists.txt  README.md  main.qml  resource.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  sparsematrix.cpp  sparsematrix.h
